Chnages in WebApi

--- a/CRMWebApi/CRMWebApi/Web.config
+++ b/CRMWebApi/CRMWebApi/Web.config
@@ -66,4 +66,4 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-<connectionStrings><add name="crm_dev_dbEntities" connectionString="metadata=res://*/Models.CRM.csdl|res://*/Models.CRM.ssdl|res://*/Models.CRM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=206.221.185.162;initial catalog=crm_dev_db;user id=crm_dev_user;password=Dino@321;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+</configuration>
