--- a/CRMWebApi/CRMWebApi/Web.config
+++ b/CRMWebApi/CRMWebApi/Web.config
@@ -66,4 +66,4 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-</configuration>
+<connectionStrings><add name="crm_dev_dbEntities" connectionString="metadata=res://*/Models.CRMModel.csdl|res://*/Models.CRMModel.ssdl|res://*/Models.CRMModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=209.222.108.170;initial catalog=crm_dev_db;user id=crm_dev_user;password=Dino@321;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
