--- a/CRM/CRM/Web.config
+++ b/CRM/CRM/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -73,4 +73,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+    <system.webServer>
+        <defaultDocument>
+            <files>
+                <add value="clientlogin.aspx" />
+            </files>
+        </defaultDocument>
+    </system.webServer>
 </configuration>
