Custom errors mode changed to Off

--- a/CRM/CRM/Web.config
+++ b/CRM/CRM/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-CRM-e23f2c92-8099-400e-97af-b6304921e589;AttachDbFilename=|DataDirectory|\aspnet-CRM-e23f2c92-8099-400e-97af-b6304921e589.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
